@@ -152,6 +152,9 @@ limitations under the License.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <configuration>
+                    <argLine>-Xmx256m -XX:MaxPermSize=386m</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
